--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link href="index.css" rel="stylesheet" type="text/css" />
+		<link href="indexDef.css" rel="stylesheet" type="text/css" />
 		<script src=".js" type="text/javascript"> </script>
 	</head>
 	<body>
@@ -32,7 +32,7 @@
 						<div class="promocionIncio">
 
 						</div>
-						<h2 id="tituloProduc">PRODUCTOS</h2>
+						<!-- <h2 id="tituloProduc">PRODUCTOS</h2>
 						<div class="cajasProductos">
 							<a href="">
 								<div class="producto" id="productoHuevos">
@@ -73,7 +73,7 @@
 								<div class="producto" id="productoNs"></div>
 							</a>
 						</div>
-					</div>
+					</div> -->
 				</article>
 			</section>
 		</main>
