--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link href="indexDef.css" rel="stylesheet" type="text/css" />
+		<link href="index.css" rel="stylesheet" type="text/css" />
 		<script src=".js" type="text/javascript"> </script>
 	</head>
 	<body>
