--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<div class="promocionIncio">
 
 						</div>
-						<!-- <h2 id="tituloProduc">PRODUCTOS</h2>
+						<h2 id="tituloProduc">PRODUCTOS</h2>
 						<div class="cajasProductos">
 							<a href="">
 								<div class="producto" id="productoHuevos">
@@ -73,7 +73,7 @@
 								<div class="producto" id="productoNs"></div>
 							</a>
 						</div>
-					</div> -->
+					</div> 
 				</article>
 			</section>
 		</main>
