--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 		<link href="indexDef.css" rel="stylesheet" type="text/css" />
 		<script src=".js" type="text/javascript"> </script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
