prueba banner movil 2

--- a/index.html
+++ b/index.html
@@ -79,7 +79,29 @@
 			</section>
 		</main>
 		<footer>
-			<div class="doodleFooter"></div>
+			<div class="contenedorContacto">
+				<div class="doodleFooter"></div> 
+			</div>
+			<div class="contenedorLogo">
+				<img src="img/logoPrueba.png" alt="Logo Web Alimetacion">
+			</div>
+			<div class="contenedorRedes">
+				<ul>
+					<!-- <li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li>
+					<li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li>
+					<li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li> -->
+				</ul>
+			</div>
+			<div class="contenedorPrivacidad">
+				<ul>
+					<li>Términos y Condiciones de U </li>
+					<li>Políticas de Privacidad</li>
+					<li>Avisos Legales</li>
+					<li>Canal Ético</li>
+					<li>Cookies</li>
+					<li>Gestionar mis cookies</li>
+				</ul>
+			</div>
 		</footer>
 		<aside>
 		</aside>
