--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<title>plantilla </title>
+		<title>Web Alimentación </title>
 		<meta charset="utf-8" />
-		<meta name="author" content="tu nombre" />
+		<meta name="author" content="Javier Cerezo y Alba Sánchez" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-		<link href="indexDef.css" rel="stylesheet" type="text/css" />
+		<link href="css/index.css" rel="stylesheet" type="text/css" />
 		<script src=".js" type="text/javascript"> </script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -35,43 +35,47 @@
 						</div>
 						<h2 id="tituloProduc">PRODUCTOS</h2>
 						<div class="cajasProductos">
-							<a href="">
+							<a href="huevo/huevo.html">
 								<div class="producto" id="productoHuevos">
 									<img src="img/huevos.png" alt="Huevos">
 									<p class="nombre">HUEVO</p>
 									<p class="flecha">→</p>
 								</div>
 							</a>
-							<a href="">
+							<a href="aceite/aceite.html">
 								<div class="producto" id="productoAceite">
 									<img src="img/aceite.png" alt="Aceite">
 									<p class="nombre">ACEITE</p>
 									<p class="flecha">→</p>
 								</div>
 							</a>
-							<a href="">
+							<a href="leche/leche.html">
 								<div class="producto" id="productoLeche">
 									<img src="img/leche.png" alt="Leche">
 									<p class="nombre">LECHE</p>
 									<p class="flecha">→</p>
 								</div>
 							</a>
-							<a href="">
+							<a href="carne/carne.html">
 								<div class="producto" id="productoCarne">
 									<img src="img/carne.png" alt="Carne">
 									<p class="nombre">Carne</p>
 									<p class="flecha">→</p>
 								</div>
 							</a>
-							<a href="">
+							<a href="pescado/pescado.html">
 								<div class="producto" id="productoPescado">
 									<img src="img/pescado.png" alt="Pescado">
 									<p class="nombre">Pescado</p>
 									<p class="flecha">→</p>
 								</div>
 							</a>
-							<a href="">
-								<div class="producto" id="productoNs"></div>
+							<a href="harina/harina.html">
+								<div class="producto" id="productoHarina">
+									<img src="img/harina.png" alt="Harina">
+									<p class="nombre">Harina</p>
+									<p class="flecha">→</p>
+								</div>
 							</a>
 						</div>
 					</div> 
@@ -80,17 +84,35 @@
 		</main>
 		<footer>
 			<div class="contenedorContacto">
-				<div class="doodleFooter"></div> 
+				<div class="doodleFooter">
+					<h2>Contacto</h2>
+					<div class="circulo-container">
+						<div class="circulo">
+							<img src="img/sobre.png" alt="Correo electrónico">
+						</div>
+						<span>webalimentos@gmail.com</span>
+					</div>
+					<div class="circulo-container">
+						<div class="circulo">
+							<img src="img/llamada-telefonica.png" alt="Telefono de contacto">
+						</div>
+						<span>645905610</span>
+					</div>
+					<div class="circulo-container">
+						<div class="circulo">
+							<img src="img/marcador-de-mapa.png" alt="Ubicación">
+						</div>
+						<span>IES Leonardo Da Vinci, C. de Blas Cabrera 90</span>
+					</div>
+				</div> 
 			</div>
 			<div class="contenedorLogo">
 				<img src="img/logoPrueba.png" alt="Logo Web Alimetacion">
 			</div>
 			<div class="contenedorRedes">
-				<ul>
-					<!-- <li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li>
-					<li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li>
-					<li class="instagram"><a href="#"><img src="img/instagram.png" alt="Icono instagram"></a></li> -->
-				</ul>
+				<div class="circulo"><img src="img/instagram.png" alt="Instagram"></div>
+				<div class="circulo"><img src="img/twitter-alt.png" alt="X"></div>
+				<div class="circulo"><img src="img/tik-tok.png" alt="Tiktok"></div>
 			</div>
 			<div class="contenedorPrivacidad">
 				<ul>
